[gd_scene load_steps=2 format=3 uid="uid://c67ruvyiuhsk2"]

[ext_resource type="Script" path="res://wheel_slider.gd" id="1_jd0x8"]

[node name="WheelSlider" type="HBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_jd0x8")

[node name="ID" type="Label" parent="."]
layout_mode = 2

[node name="Indicator" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
show_percentage = false

[node name="Minus" type="Button" parent="."]
layout_mode = 2
text = "<-"

[node name="Plus" type="Button" parent="."]
layout_mode = 2
text = "->"

[node name="RPM" type="Label" parent="."]
layout_mode = 2
text = "RPM: "

[connection signal="button_down" from="Minus" to="." method="_on_minus_button_down"]
[connection signal="button_up" from="Minus" to="." method="_on_minus_button_up"]
[connection signal="button_down" from="Plus" to="." method="_on_plus_button_down"]
[connection signal="button_up" from="Plus" to="." method="_on_plus_button_up"]
